Restore BatchPolicy.maxConcurrentThreads, so benchmarks/examples can use multiple client implementations. Modify proxy client to use virtual threads. Suppress grpc deprecation warning.